--- a/deployment.yaml
+++ b/deployment.yaml
@@ -5,7 +5,15 @@ metadata:
   labels:
     app: userapi
 spec:
-  replicas: 1
+  replicas: 2
+  minReadySeconds: 20
+  progressDeadlineSeconds: 100
+  revisionHistoryLimit: 5
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
   selector:
     matchLabels:
       app: userapi
